<resources>
    <string name="app_name">PennyJoy</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="string_name_for_signupnoacc1">Имя</string>
    <string name="string_next_for_btn">Далее</string>
    <string name="string_surname_for_sign_up_noacc1">Фамилия</string>
    <string name="string_login">Логин</string>
    <string name="string_passwd">Пароль</string>
    <string name="string_repeat_passwd">Повторите пароль</string>
    <string name="first_time_in_pj">Впервые в PennyJoy?</string>
    <string name="enter_btn">Войти</string>
    <string name="sign_up_btn">Зарегистрироваться</string>
    <string name="CategoryAddGood">Категория</string>
    <string name="nameAddGood">Наименование</string>
    <string name="costAddGood">Стоимость</string>
    <string name="purchaseOfPurpose">Цель покупки...</string>
    <string name="good_int_for_tag">2201</string>
    <string name="name_for_edit_user">Имя</string>
    <string name="surname_of_user">Фамилия</string>
    <string name="login_for_edit_user">Логин</string>
    <string name="password_for_edit_user">Пароль</string>
    <string name="salary_for_edit_user">Заработная плата</string>
    <string name="currency">Валюта</string>
    <string name="delete_account">Удалить аккаунт</string>
    <string name="enter_old_passwd">Введите старый пароль</string>

    <string name="what_for">Зачем вам эта цель?</string>

    <string name="APP_PREFERENCES">MySP</string>
    <string name="id_for_categoty_adapter">122324525</string>


    <string-array name="answers">

        <item>Причина для покупки достаточно веская</item>
        <item>У меня нет причины брать это</item>
        <item>Возможно пригодится</item>
        <item>Причина покупки не настолько веская</item>

        <item>Этот продукт крайне полезен для меня</item>
        <item>Беру ради удовольствия</item>
        <item>Возможно этот продукт полезен</item>
        <item>Удовольствия больше чем пользы</item>

        <item>Я готов купить за любую цену</item>
        <item>Я не уверен в качестве данного продукта</item>
        <item>Качество не столь важно</item>
        <item>За такую цену качество могло быть лучше</item>

        <item>Данный продукт не несет вреда</item>
        <item>Данный продукт не является полезным</item>

        <item>Могу себе позволить без вреда бюджету</item>
        <item>Покупка пошатнёт мой бюджет</item>

    </string-array>

    <string-array name="questions">

        <item>На сколько оно тебе необходимо?</item>
        <item>Принесет ли мне данная покупка пользу?</item>
        <item>Насколько соизмеримы цена и качество?</item>
        <item>Принесет ли эта покупка вред здоровью?</item>
        <item>Несет ли эта покупка вред моему бюджету?</item>

    </string-array>
    <string name="mb_yes">Вероятно данный товар вам пригодится. Не помешало бы взять</string>
    <string name="mb_no">Вероятно вам не нужен данный товар и он может стать пустой тратой денег</string>
    <string name="yes">Данный товар вам дейтсвительно нужен. Смело берите!</string>
    <string name="no">Вам не понадобится данный товар!
        Лучше отложите эти деньги</string>



    <string name="goodJobForMonth">В прошлом месяце вы показали хорошие результаты. Так держать!</string>
    <string name="badJobForMonth">Вам стоит эффективнее распоряжаться бюджетом! Удачи в следующем месяце</string>


</resources>