<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">
    <TextView
        android:id="@+id/lblCategoryFrag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CategoryAddGood"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="59dp"
        android:textSize="30dp"
        />
   <Spinner
       android:id="@+id/categoryDropDown"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_centerHorizontal="true"
       android:layout_marginTop="114dp"
       />

    <TextView
        android:id="@+id/lblNameFrag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nameAddGood"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="185dp"
        android:textSize="30dp"
        />
    <EditText
        android:id="@+id/txtNameOfGood"
        android:layout_width="323dp"
        android:layout_height="37dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="241dp"
        android:background="@drawable/body_for_edit_text"/>

    <TextView
        android:id="@+id/lblCostOfgood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/costAddGood"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="334dp"
        android:textSize="30dp"
        />
    <EditText
        android:id="@+id/txtCostOfGood"
        android:layout_width="323dp"
        android:layout_height="37dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="388dp"
        android:inputType="numberDecimal"
        android:background="@drawable/body_for_edit_text"/>


    <EditText
        android:hint="@string/purchaseOfPurpose"
        android:id="@+id/txtPurchaseOfPurpose"
        android:layout_width="310dp"
        android:layout_height="207dp"
        android:layout_centerHorizontal="true"
        android:gravity="top"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:layout_marginTop="460dp"
        android:background="@drawable/body_for_edit_text"/>

    <Button
        android:id="@+id/btnAddGoodInFrag"
        android:layout_width="153dp"
        android:layout_height="49dp"
        android:text="+"
        android:textSize="40dp"
        android:layout_centerHorizontal="true"

        android:layout_marginTop="680dp"
        />



</RelativeLayout>