<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivityNoAcc2"
    android:background="@color/black">



        <RelativeLayout
            android:id="@+id/containerForLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/containerForPasswd"
            android:layout_marginBottom="40dp"
            android:padding="30dp"
            >


            <EditText
                android:id="@+id/txtLogin"
                android:layout_width="321dp"
                android:layout_height="53dp"
                android:layout_centerInParent="true"
                android:background="@drawable/body_for_edit_text"
                android:hint="@string/string_login"
                android:maxLength="20"
                android:inputType="textPersonName"
                android:paddingLeft="20dp"
                android:textSize="30dp" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/containerForPasswd"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp">

            <EditText
                android:id="@+id/txtPasswd"
                android:layout_width="321dp"
                android:layout_height="53dp"
                android:layout_centerInParent="true"
                android:textSize="30dp"
                android:paddingLeft="20dp"
                android:inputType="textPassword"
                android:hint="@string/string_passwd"
                android:maxLength="16"
                android:background="@drawable/body_for_edit_text"/>
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/containerForPasswdRepeat"
            android:layout_below="@id/containerForPasswd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="30dp">
            <EditText
                android:id="@+id/txtRepeatPasswd"
                android:layout_width="321dp"
                android:layout_height="53dp"
                android:layout_centerInParent="true"
                android:inputType="textPassword"
                android:hint="@string/string_repeat_passwd"
                android:textSize="30dp"
                android:paddingLeft="20dp"
                android:maxLength="16"
                android:background="@drawable/body_for_edit_text"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/containerForBtnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:padding="30dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnNextSecond"
                android:layout_width="287dp"
                android:layout_height="46dp"
                android:layout_centerInParent="true"
                android:background="@drawable/body_for_btn_radius_13_dp_sign_in"
                android:onClick="nextLog2"
                android:text="@string/string_next_for_btn"
                android:textAllCaps="false"
                android:foreground="?android:attr/selectableItemBackground"
                android:textSize="20dp" />
        </RelativeLayout>


    <ProgressBar
        android:id="@+id/progressBarInSignUpNoAcc2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/purple_500"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        />


</RelativeLayout>